src/objects/New_Account_Review__c.object
<CustomObject>
    <description>Objeto para tabla de retos en plan de acción</description>
    <fields>
        <fullName>Account_Review__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account_Review</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>News_Accounts_reviews</relationshipLabel>
        <relationshipName>News_Accounts_reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fecha__c</fullName>
        <label>Fecha</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>News_Accounts_reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>New_Account_Review</label>
    <nameField>
        <label>New_Account_Review Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>News_Accounts_reviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>